Analiza wstępna, przygotowanie danych, tworzenie modeli

--- a/notebooks/01_Start.ipynb
+++ b/notebooks/01_Start.ipynb
@@ -280,6 +280,18 @@
     "print(df_clean['target'].value_counts(normalize=True))\n",
     "display(df_clean.head())"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "81a25660",
+   "metadata": {},
+   "source": [
+    "**Charakterystyka rynku Peer-to-Peer (P2P) Lending**\n",
+    "\n",
+    "Analizowane w pracy dane pochodzą z platformy Lending Club, działającej w modelu Peer-to-Peer (pożyczki społecznościowe). Model ten polega na bezpośrednim łączeniu kapitałodawców (inwestorów indywidualnych lub instytucjonalnych) z pożyczkobiorcami za pośrednictwem platformy internetowej, z pominięciem tradycyjnych instytucji bankowych.\n",
+    "\n",
+    "W przeciwieństwie do sektora bankowego, gdzie ryzyko kredytowe jest agregowane przez instytucję, w modelu P2P ryzyko niewypłacalności dłużnika jest przenoszone bezpośrednio na inwestora. Sprawia to, że precyzyjna ocena wiarygodności kredytowej (scoring) i transparentność danych stają się kluczowymi czynnikami sukcesu. Specyfika tego rynku przyciąga często klientów z segmentu near-prime (o podwyższonym profilu ryzyka), co tłumaczy wysoki odsetek kredytów zagrożonych (default rate) w badanej próbie."
+   ]
   }
  ],
  "metadata": {
@@ -298,7 +310,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
