--- a/notebooks/05_Model_B_XGBoost.ipynb
+++ b/notebooks/05_Model_B_XGBoost.ipynb
@@ -10,71 +10,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting xgboost\n",
-      "  Downloading xgboost-3.1.3-py3-none-win_amd64.whl.metadata (2.0 kB)\n",
+      "Requirement already satisfied: xgboost in c:\\users\\dudam\\anaconda3\\lib\\site-packages (3.1.3)\n",
       "Requirement already satisfied: numpy in c:\\users\\dudam\\anaconda3\\lib\\site-packages (from xgboost) (2.3.5)\n",
       "Requirement already satisfied: scipy in c:\\users\\dudam\\anaconda3\\lib\\site-packages (from xgboost) (1.16.3)\n",
-      "Downloading xgboost-3.1.3-py3-none-win_amd64.whl (72.0 MB)\n",
-      "   ---------------------------------------- 0.0/72.0 MB ? eta -:--:--\n",
-      "   ---------------------------------------- 0.0/72.0 MB ? eta -:--:--\n",
-      "   ---------------------------------------- 0.8/72.0 MB 5.3 MB/s eta 0:00:14\n",
-      "   - -------------------------------------- 2.4/72.0 MB 6.5 MB/s eta 0:00:11\n",
-      "   -- ------------------------------------- 3.9/72.0 MB 6.8 MB/s eta 0:00:11\n",
-      "   -- ------------------------------------- 4.7/72.0 MB 6.2 MB/s eta 0:00:11\n",
-      "   --- ------------------------------------ 6.0/72.0 MB 6.2 MB/s eta 0:00:11\n",
-      "   ---- ----------------------------------- 7.3/72.0 MB 6.1 MB/s eta 0:00:11\n",
-      "   ---- ----------------------------------- 8.4/72.0 MB 5.9 MB/s eta 0:00:11\n",
-      "   ----- ---------------------------------- 9.7/72.0 MB 6.0 MB/s eta 0:00:11\n",
-      "   ------ --------------------------------- 11.0/72.0 MB 6.1 MB/s eta 0:00:10\n",
-      "   ------ --------------------------------- 12.6/72.0 MB 6.2 MB/s eta 0:00:10\n",
-      "   ------- -------------------------------- 13.9/72.0 MB 6.2 MB/s eta 0:00:10\n",
-      "   -------- ------------------------------- 15.5/72.0 MB 6.3 MB/s eta 0:00:10\n",
-      "   --------- ------------------------------ 16.8/72.0 MB 6.3 MB/s eta 0:00:09\n",
-      "   ---------- ----------------------------- 18.1/72.0 MB 6.3 MB/s eta 0:00:09\n",
-      "   ---------- ----------------------------- 19.7/72.0 MB 6.3 MB/s eta 0:00:09\n",
-      "   ----------- ---------------------------- 20.4/72.0 MB 6.2 MB/s eta 0:00:09\n",
-      "   ------------ --------------------------- 21.8/72.0 MB 6.2 MB/s eta 0:00:09\n",
-      "   ------------ --------------------------- 23.3/72.0 MB 6.2 MB/s eta 0:00:08\n",
-      "   ------------- -------------------------- 24.6/72.0 MB 6.3 MB/s eta 0:00:08\n",
-      "   -------------- ------------------------- 26.0/72.0 MB 6.2 MB/s eta 0:00:08\n",
-      "   -------------- ------------------------- 27.0/72.0 MB 6.2 MB/s eta 0:00:08\n",
-      "   --------------- ------------------------ 28.3/72.0 MB 6.1 MB/s eta 0:00:08\n",
-      "   ---------------- ----------------------- 29.4/72.0 MB 6.1 MB/s eta 0:00:07\n",
-      "   ----------------- ---------------------- 30.7/72.0 MB 6.1 MB/s eta 0:00:07\n",
-      "   ----------------- ---------------------- 32.2/72.0 MB 6.1 MB/s eta 0:00:07\n",
-      "   ------------------ --------------------- 33.6/72.0 MB 6.2 MB/s eta 0:00:07\n",
-      "   ------------------- -------------------- 34.6/72.0 MB 6.1 MB/s eta 0:00:07\n",
-      "   ------------------- -------------------- 35.7/72.0 MB 6.1 MB/s eta 0:00:06\n",
-      "   -------------------- ------------------- 36.7/72.0 MB 6.0 MB/s eta 0:00:06\n",
-      "   --------------------- ------------------ 38.3/72.0 MB 6.1 MB/s eta 0:00:06\n",
-      "   --------------------- ------------------ 39.6/72.0 MB 6.1 MB/s eta 0:00:06\n",
-      "   ---------------------- ----------------- 41.2/72.0 MB 6.1 MB/s eta 0:00:06\n",
-      "   ----------------------- ---------------- 42.5/72.0 MB 6.1 MB/s eta 0:00:05\n",
-      "   ------------------------ --------------- 43.5/72.0 MB 6.1 MB/s eta 0:00:05\n",
-      "   ------------------------- -------------- 45.1/72.0 MB 6.1 MB/s eta 0:00:05\n",
-      "   ------------------------- -------------- 46.4/72.0 MB 6.2 MB/s eta 0:00:05\n",
-      "   -------------------------- ------------- 47.7/72.0 MB 6.2 MB/s eta 0:00:04\n",
-      "   --------------------------- ------------ 49.0/72.0 MB 6.2 MB/s eta 0:00:04\n",
-      "   --------------------------- ------------ 50.3/72.0 MB 6.2 MB/s eta 0:00:04\n",
-      "   ---------------------------- ----------- 51.4/72.0 MB 6.1 MB/s eta 0:00:04\n",
-      "   ----------------------------- ---------- 53.0/72.0 MB 6.2 MB/s eta 0:00:04\n",
-      "   ------------------------------ --------- 54.5/72.0 MB 6.2 MB/s eta 0:00:03\n",
-      "   ------------------------------- -------- 55.8/72.0 MB 6.2 MB/s eta 0:00:03\n",
-      "   ------------------------------- -------- 57.1/72.0 MB 6.2 MB/s eta 0:00:03\n",
-      "   -------------------------------- ------- 58.7/72.0 MB 6.2 MB/s eta 0:00:03\n",
-      "   --------------------------------- ------ 60.0/72.0 MB 6.2 MB/s eta 0:00:02\n",
-      "   ---------------------------------- ----- 61.3/72.0 MB 6.2 MB/s eta 0:00:02\n",
-      "   ---------------------------------- ----- 62.9/72.0 MB 6.3 MB/s eta 0:00:02\n",
-      "   ----------------------------------- ---- 64.5/72.0 MB 6.3 MB/s eta 0:00:02\n",
-      "   ------------------------------------ --- 65.8/72.0 MB 6.3 MB/s eta 0:00:01\n",
-      "   ------------------------------------- -- 67.1/72.0 MB 6.3 MB/s eta 0:00:01\n",
-      "   -------------------------------------- - 68.4/72.0 MB 6.3 MB/s eta 0:00:01\n",
-      "   -------------------------------------- - 70.0/72.0 MB 6.3 MB/s eta 0:00:01\n",
-      "   ---------------------------------------  71.3/72.0 MB 6.3 MB/s eta 0:00:01\n",
-      "   ---------------------------------------  71.8/72.0 MB 6.3 MB/s eta 0:00:01\n",
-      "   ---------------------------------------- 72.0/72.0 MB 6.2 MB/s  0:00:11\n",
-      "Installing collected packages: xgboost\n",
-      "Successfully installed xgboost-3.1.3\n",
       "Log: Wczytywanie pełnych zbiorów danych...\n",
       "Log: Czyszczenie nazw kolumn ze znaków specjalnych...\n",
       "Log: Dane gotowe. Model B będzie uczył się na 39 zmiennych.\n",
@@ -86,7 +24,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\dudam\\anaconda3\\Lib\\site-packages\\xgboost\\training.py:199: UserWarning: [07:38:48] WARNING: C:\\actions-runner\\_work\\xgboost\\xgboost\\src\\learner.cc:790: \n",
+      "c:\\Users\\dudam\\anaconda3\\Lib\\site-packages\\xgboost\\training.py:199: UserWarning: [08:43:52] WARNING: C:\\actions-runner\\_work\\xgboost\\xgboost\\src\\learner.cc:790: \n",
       "Parameters: { \"use_label_encoder\" } are not used.\n",
       "\n",
       "  bst.update(dtrain, iteration=i, fobj=obj)\n"
@@ -99,9 +37,9 @@
       "Log: Model XGBoost został wytrenowany pomyślnie!\n",
       "Log: Generowanie prognoz...\n",
       "\n",
-      "--- WYNIKI POJEDYNKU MODELI ---\n",
-      "Model A (Benchmark - FICO): AUC = 0.5934\n",
-      "Model B (Challenger - ML):  AUC = 0.6966\n",
+      "--- WYNIKI PORÓWNANIA MODELI ---\n",
+      "Model A (FICO): AUC = 0.5934\n",
+      "Model B (ML):  AUC = 0.6966\n",
       "---------------------------------------\n",
       "Poprawa (Lift):            +0.1032\n"
      ]
@@ -207,13 +145,13 @@
     "auc_score_a = roc_auc_score(y_test, probs_a)\n",
     "lift = auc_score_b - auc_score_a\n",
     "\n",
-    "print(f\"\\n--- WYNIKI POJEDYNKU MODELI ---\")\n",
-    "print(f\"Model A (Benchmark - FICO): AUC = {auc_score_a:.4f}\")\n",
-    "print(f\"Model B (Challenger - ML):  AUC = {auc_score_b:.4f}\")\n",
+    "print(f\"\\n--- WYNIKI PORÓWNANIA MODELI ---\")\n",
+    "print(f\"Model A (FICO): AUC = {auc_score_a:.4f}\")\n",
+    "print(f\"Model B (ML):  AUC = {auc_score_b:.4f}\")\n",
     "print(f\"---------------------------------------\")\n",
     "print(f\"Poprawa (Lift):            +{lift:.4f}\")\n",
     "\n",
-    "# --- 5. WIZUALIZACJA: CHAMPION VS CHALLENGER ---\n",
+    "# --- 5. WIZUALIZACJA: MODELI ---\n",
     "\n",
     "fpr_a, tpr_a, _ = roc_curve(y_test, probs_a)\n",
     "fpr_b, tpr_b, _ = roc_curve(y_test, probs_b)\n",
