--- a/notebooks/06_Symulacja_Biznesowa.ipynb
+++ b/notebooks/06_Symulacja_Biznesowa.ipynb
@@ -16,7 +16,7 @@
       "Maksymalny zysk Modelu A (FICO):   $5,793,000\n",
       "Maksymalny zysk Modelu B (XGBoost): $36,784,200\n",
       "--------------------------------------------------\n",
-      "DODATKOWY ZYSK (Wartość Twojej pracy): $30,991,200\n"
+      "DODATKOWY ZYSK (Wartość pracy): $30,991,200\n"
      ]
     },
     {
@@ -46,8 +46,8 @@
     "\n",
     "# Wczytanie prawdziwych wyników (y_test) i prognoz obu modeli\n",
     "y_test = pd.read_csv('../data/y_test.csv').values.ravel()\n",
-    "probs_a = np.load('../data/probs_model_a.npy') # FICO\n",
-    "probs_b = np.load('../data/probs_model_b.npy') # Twój Model\n",
+    "probs_a = np.load('../data/probs_model_a.npy') # Model A\n",
+    "probs_b = np.load('../data/probs_model_b.npy') # Model B\n",
     "\n",
     "# --- 2. FUNKCJA OBLICZAJĄCA ZYSK ---\n",
     "def calculate_profit(y_true, y_prob, threshold=0.20):\n",
@@ -68,7 +68,7 @@
     "    return profit - loss, np.sum(decisions)\n",
     "\n",
     "# --- 3. OPTYMALIZACJA I PORÓWNANIE ---\n",
-    "# Sprawdzamy różne progi ryzyka, żeby znaleźć najlepszą strategię dla obu modeli\n",
+    "# Sprawdzanie różnych progów ryzyka, aby znaleźć najlepszą strategię dla obu modeli\n",
     "\n",
     "thresholds = np.linspace(0.05, 0.50, 50)\n",
     "profits_a = [calculate_profit(y_test, probs_a, t)[0] for t in thresholds]\n",
@@ -81,7 +81,7 @@
     "print(f\"Maksymalny zysk Modelu A (FICO):   ${max_profit_a:,.0f}\")\n",
     "print(f\"Maksymalny zysk Modelu B (XGBoost): ${max_profit_b:,.0f}\")\n",
     "print(f\"--------------------------------------------------\")\n",
-    "print(f\"DODATKOWY ZYSK (Wartość Twojej pracy): ${max_profit_b - max_profit_a:,.0f}\")\n",
+    "print(f\"DODATKOWY ZYSK (Wartość pracy): ${max_profit_b - max_profit_a:,.0f}\")\n",
     "\n",
     "# --- 4. WIZUALIZACJA ZYSKÓW ---\n",
     "plt.figure(figsize=(10, 6))\n",
